<resources>
    <string name="wan_page_home">首页</string>
    <string name="wan_square">广场</string>
    <string name="wan_official_accounts">公众号</string>
    <string name="wan_system">体系</string>
    <string name="wan_project">项目</string>

    <string name="privacy_policy">隐私协议</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="privacy_policy_content">隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议隐私协议</string>

</resources>